# hdfset

./: .gitignore  Cargo.toml  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yaml  ci.yml
python/tests/: test_version.py
src/hdfset/: __init__.py  base.py  common.py  core.py  data.py  dataset.py  utils.py
tests/: test_base.py  test_basic.py  test_dataset.py
