[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdfset"
version = "0.4.1"
description = "A Python package for reading and writing HDF5 files."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "daizutabi", email = "daizutabi@gmail.com" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"
dependencies = ["pandas>=2", "tables>=3"]

[project.urls]
Documentation = "https://github.com/daizutabi/hdfset"
Source = "https://github.com/daizutabi/hdfset"
Issues = "https://github.com/daizutabi/hdfset/issues"

[dependency-groups]
dev = [
  "basedpyright>=1.37.3",
  "pandas-stubs>=3.0.0.260204",
  "prek>=0.3.1",
  "pytest>=9",
  "pytest-clarity>=1",
  "pytest-cov>=7.0",
  "pytest-randomly>=4",
  "pytest-xdist>=3.8",
  "ruff>=0.15.0",
]

[tool.pytest]
addopts = ["--doctest-modules", "--cov=hdfset", "--cov-report=lcov:lcov.info"]
strict_config = true
strict_markers = true
strict_parametrization_ids = true
strict_xfail = true

[tool.coverage.report]
exclude_lines = ["no cov", "raise NotImplementedError", "if TYPE_CHECKING:"]
skip_covered = true

[tool.ruff]
preview = true
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F401"]
ignore = [
  "ANN002",
  "ANN003",
  "ANN401",
  "ARG001",
  "ARG002",
  "CPY001",
  "D",
  "DOC",
  "EM101",
  "ERA001",
  "FBT001",
  "FBT002",
  "PERF401",
  "PGH003",
  "PLR2004",
  "SIM102",
  "TRY003",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "ARG", "PLR", "S"]

[tool.ruff.format]
preview = true

[tool.basedpyright]
include = ["src", "tests"]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
